Batch 2 Modernization: adopt List.of, Set.of, and modern formatting